artifacts/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: wso2is-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - identityserver
  rules:
    - host: identityserver
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2is-service
                port:
                  number: 9443
